refactor(config): implement GameMode-aware actor actions and evolutions